--- a/src/templates/posts/index.md.erb
+++ b/src/templates/posts/index.md.erb
@@ -6,7 +6,7 @@ date: <%= to_date %>
 hero: ./images/no-hero.png
 excerpt: 
 tags: ["週報"]
-blog_url: https://leglog.lkj.io/<%= to_date %>
+blog_url: https://leglog.lkj.io/<%= slug %>
 ---
 
 <!--greeting here-->
